--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -14,7 +14,7 @@ mixin navbar(value = {})
 				.navbar-head
 					+link({
 						href: "/",
-						class: "navbar-title style-primary-dark-hover style-primary-focus"
+						class: "navbar-title style-primary-dark-hover style-primary-dark-focus"
 					})(itemprop="url")
 						img.navbar-logo(src="/assets/gear-svg-icon-logo-color-2.svg" alt="Logo." inline)
 						span.navbar-title-line
