--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -88,7 +88,7 @@
 
         &-head {
             border-bottom: 1px solid transparent;
-            transition: background-color .45s ease, border-color .45s ease;
+            transition: background-color .5s ease, border-color .5s ease;
             flex-direction: row;
             align-items: center;
             flex-wrap: nowrap;
@@ -96,7 +96,7 @@
         }
 
         &-logo {
-            transform: translateY(4px);
+            transform: translate3d(0, 4px, 0);
             // display: inline-block;
             line-height: normal;
             min-height: 20px;
@@ -105,7 +105,7 @@
         }
 
         &-title {
-            transition: color .45s ease;
+            transition: color .5s ease;
             font-family: $bold-font;
             letter-spacing: 0.03em;
             line-height: $height;
@@ -122,7 +122,7 @@
             }
 
             &-line {
-                transition: border-left-color .45s ease 0s;
+                transition: border-left-color .5s ease 0s;
 
                 border-left: 1px solid transparent;
                 border-left-color: darken($mid-light, 2%);
@@ -151,7 +151,7 @@
         }
 
         &-link {
-            transition: color .45s ease;
+            transition: color .5s ease;
             text-transform: uppercase;
             font-family: $bold-font;
             text-decoration: none;
@@ -169,8 +169,8 @@
 
                 &:before {
                     transition: transform .25s cubic-bezier(.25, .46, .45, .94),
-                                background-color .45s ease;
-                    transform: translateY($height - 14px) scaleX(0);
+                                background-color .5s ease;
+                    transform: translate3d(0, $height - 14px, 0) scaleX(0);
                     // background-color: $primary;
                     @include applyTheme(background-color, "primary");
                     border: 1.5px solid transparent;
@@ -192,7 +192,7 @@
                 @include applyTheme(color, "dark");
 
                 .navbar-link-content:before {
-                    transform: translateY($height - 14px) scaleX(1);
+                    transform: translate3d(0, $height - 14px, 0) scaleX(1);
                     transform-origin: 0 50%;
                 }
             }
@@ -211,7 +211,7 @@
                 }
 
                 &:before {
-                    transition: background-color .45s ease;
+                    transition: background-color .5s ease;
                     // background-color: $primary-dark;
                     @include applyTheme(background-color, "dark");
                 }
@@ -248,14 +248,14 @@
                 border-bottom: 1px solid transparent;
                 box-shadow: 0 5px 25px transparent;
                 transition: transform .55s ease, border-color .5s ease;
-                transform: translateY(-150%);
+                transform: translate3d(0, -150%, 0);
                 display: block;
                 width: 100%;
                 z-index: 0;
             }
 
             &-list {
-                transition: background-color .45s ease;
+                transition: background-color .5s ease;
                 background-color: lighten($very-light, 2%); // #292d33
                 @include applyTheme(background-color, "very-light");
                 position: relative;
@@ -308,7 +308,7 @@
                 }
 
                 .navbar-main {
-                    transform: translateY(0);
+                    transform: translate3d(0, 0, 0);
                 }
             }
 
@@ -317,28 +317,30 @@
                 padding: 0 24px;
 
                 &-content:before {
-                    transform: translateY($height - 18px) scaleX(0);
+                    transform: translate3d(0, $height - 18px, 0) scaleX(0);
                 }
 
                 &-focus,
                 &:focus,
                 &:hover {
                     .navbar-link-content:before {
-                        transform: translateY($height - 18px) scaleX(1) ;
+                        transform: translate3d(0, $height - 18px, 0) scaleX(1);
                     }
                 }
             }
 
             &-menu {
                 & {
-                    transition: color .45s ease;
-                    @include applyTheme(color, "dark");
+                    transition: color .5s ease;
+                    color: $primary;
+                    color: var(--dark, primary);
                     // @include applyTheme(color, "primary");
                 }
 
                 &:hover, &:focus {
                     cursor: pointer;
-                    @include applyTheme(color, "dark");
+                    color: $primary;
+                    color: var(--dark, primary);
                 }
             }
 
