--- a/src/scss/components/transition.scss
+++ b/src/scss/components/transition.scss
@@ -10,14 +10,16 @@
     }
 
     &-in-view {
-        transition: opacity 0.5s ease;
-        // , transform 0.4s ease 0.1s
-        // transform: translateY(0px);
+        transition: opacity .5s ease, transform .4s ease 0.1s;
+        transform: translate3d(0, 0, 0);
         opacity: 1;
 
         .is-animating & {
-            // transform: translateY(-20px) !important;
             opacity: 0 !important;
+        }
+
+        html.is-animating.at-top & {
+            transform: translate3d(0, -25px, 0) !important;
         }
     }
 }
