--- a/views/pages/about-me.pug
+++ b/views/pages/about-me.pug
@@ -22,7 +22,7 @@ block content
 		image: {
 			class: "effect-parallax hero-img",
 			src: "/assets/white-flower",
-			alt: "A city Image"
+			alt: "An image of a white flower surrounded by green leaves from Unsplash."
 		}
 	})
 
