--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -22,7 +22,7 @@ block content
 		image: {
 			class: "effect-parallax hero-img",
 			src: "/assets/blue-sky",
-			alt: "A city Image"
+			alt: "An image of a bright blue sky with small patches of clouds over two appartment high rises that are just barely in frame, from Unsplash. "
 		}
 	})
 
