--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -248,11 +248,13 @@ a.skip-main {
     a.focus-box {
         & {
             text-decoration: underline;
-            // padding: 8px;
             // padding-left: 0;
+
+            @media #{$screen-size-lt-tablet} {
+                padding: 3px;
+            }
         }
 
-        &:active,
         &:focus {
             border: solid 2px $secondary-light;
             box-shadow: inset 0 0 0 2px #000;
