--- a/src/scss/components/transition.scss
+++ b/src/scss/components/transition.scss
@@ -4,7 +4,7 @@
         transition: opacity 0.5s ease;
         opacity: 1;
 
-        .is-animating & {
+        .isanimating & {
             opacity: 0 !important;
         }
     }
