--- a/views/components/image.pug
+++ b/views/components/image.pug
@@ -17,7 +17,7 @@ mixin image(value = {})
 
 					source.webp(media='(max-width: 900px)' srcset!=`${src}.webp?w=900&quality=90` sizes="100vw" width="100vw" type='image/webp')
 					source(media='(min-width: 900px)' srcset!=`${src}.webp?w=950&quality=100` sizes="100vw" width="100vw" type='image/jpeg')
-					img.core-img(src!=`${src}.jpg` sizes="(max-width: 500px) 500px,(max-width: 700px) 700px,(max-width: 900px) 900px, 100vw" alt=alt loading="lazy" width="100vw" itemprop="url")
+					img.core-img(src!=`${src}.jpg?w=1100&quality=100` sizes="(max-width: 500px) 500px,(max-width: 700px) 700px,(max-width: 900px) 900px, 100vw" alt=alt loading="lazy" width="100vw" itemprop="url")
 				noscript Javascript is necesscary for this sites awesome experience.
 					picture
 						source(srcset!=`${src}.webp` sizes="100vw" width="100vw" type='image/webp')
