--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -15,8 +15,8 @@ block content
 		content: "Crafting the extrodinary is my passion.",
 		image: {
 			class: "effect-parallax hero-img",
-			src: "/assets/closeup-stones",
-			alt: "A city Image"
+			src: "/assets/grand-canyon",
+			alt: "An image looking up from inside the Grand Canyon from Unsplash."
 		}
 	})
 
@@ -139,11 +139,11 @@ block content
 						}, true)
 							+tile({
 								title: "Google Designs About",
-								class: "layer-box layer-surface layout-block",
+								class: "layer-box layer-surface layout-block layer-tile-outline",
 								image: {
 									class: "effect-parallax",
-									src: "/assets/city",
-									alt: "City Alt",
+									src: "/assets/white_car",
+									alt: "An image of what looks to be a turquoise Chevrolet, from Unsplash.",
 								}
 							})
 
@@ -157,14 +157,14 @@ block content
 					})
 						+link({
 							href: "/my-projects",
-							class: "layout-block"
+							class: "layout-block layer-tile-outline"
 						}, true)
 							+tile({
 								title: "Google Designs Project",
 								class: "layer-box layer-surface layout-block",
 								image: {
 									src: "/assets/blue-sky",
-									alt: "Blue sky Alt",
+									alt: "An image of a bright blue sky with small patches of clouds over two appartment high rises that are just barely in frame, from Unsplash.",
 								}
 							})
 
