--- a/src/scss/components/transition.scss
+++ b/src/scss/components/transition.scss
@@ -1,7 +1,7 @@
 /*! purgecss start ignore */
 .transition {
     &-fade {
-        transition: opacity 0.5s ease;
+        transition: opacity .5s ease;
         opacity: 1;
 
         .is-animating & {
