--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -92,7 +92,8 @@
         &--1 {
             // box-shadow: 0 5px 14px 6px rgba(0,0,0,.23);
             // box-shadow: 0 5px 14px 6px rgba(19, 19, 19, 0.23);
-            border: 1px solid change-color($white, $alpha: 0.7);
+            box-shadow: 0 2px 10px 2px rgba(33, 33, 33, 0.22);
+            // border: 1px solid change-color($white, $alpha: 0.7);
             // border-color: var(--tertiary, white);
             // border: 2px solid var(--dark);
             // border: 2px solid rgba(255, 255, 255, 0.35);
