Image fits the entire layer now, even tall areas

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -12,7 +12,7 @@ block content
   //- Hero layer
   +hero({
     title: page.title,
-    content: "Crafting the extraordinary is my passion.",
+    content: "Creating the extraordinary is my dream, and my passion.",
     image: {
       class: "effect-parallax hero-img",
       src: "/assets/grand-canyon",
