--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -11,7 +11,7 @@ include ../components/row.pug
 block content
   //- Hero layer
   +hero({
-    title: page.title,
+    title: "The love of the Craft.",
     content: "Creating the extraordinary is my dream, and my passion.",
     image: {
       class: "effect-parallax hero-img",
