--- a/views/app.pug
+++ b/views/app.pug
@@ -36,7 +36,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
         "@type": "WebSite",
         "url": "#{page.websiteURL}",
         "name": "Joseph Ojo",
-        "description": #{page.description},
+        "description": "#{page.description}",
         "image": "#{websiteURL}/favicon/android-icon-512x512.png",
         "sameAs": [
           "https://www.linkedin.com/in/o-josephojo/",
