--- a/views/app.pug
+++ b/views/app.pug
@@ -44,7 +44,6 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
         ]
       }
 
-
     //- if dev
       meta(http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/ https://josephojo.com; script-src 'self' https://polyfill.io/ https://cdnjs.cloudflare.com/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self' * blob: ws:; block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; child-src 'none'; frame-src 'none'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/okikio-assets/;")
 
@@ -113,6 +112,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     link(rel="dns-prefetch" href="https://cdnjs.cloudflare.com/" crossorigin)
     <![endif]-->
 
+    script(src="https://res.cloudinary.com/okikio-assets/raw/upload/polyfill.min.js" async)
     script(src="./js/ver-check.min.js" ph-inline async)
   body
     +link({
@@ -144,4 +144,4 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 
     script(src=`${dev ? "./js/modern.min.js" : "./js/vendor.min.js"}` ph-inline async)
     if !dev
-      //- script(src="./js/service.min.js" ph-inline async)
+      script(src="./js/service.min.js" ph-inline async)
