--- a/views/components/image.pug
+++ b/views/components/image.pug
@@ -1,26 +1,23 @@
 mixin image(value = {})
-	- let _class = value.class;
-	- let src = value.src || "/assets/city";
-	- let alt = value.alt || "Alternate text";
+  - let _class = value.class;
+  - let src = value.src || "/assets/city";
+  - let alt = value.alt || "Alternate text";
 
-	.layer-image(class=_class)
-		.layer-image-preview-img-card
-		figure.load-img(itemprop="image" itemscope itemtype="https://schema.org/ImageObject")
-			.img-contain
-				picture.plchldr-pic
-					//-  inline
-					img.placeholder-img(src!=`${src}.jpg?w=60&quality=90&effect=blur:120` sizes="100vw" width="100vw" alt=alt loading="lazy" itemprop="url")
-				picture
-					each n in [3, 6]
-						source.webp(media=`(max-width: ${n}00px)` srcset!=`${src}.webp?w=${n}00&quality=70` sizes=`${n}00px` width=`${n}00px` type='image/webp')
-						source(media=`(max-width: ${n}00px)` srcset!=`${src}.jpg?w=${n}00&quality=70` sizes=`${n}00px` width=`${n}00px` type='image/jpeg')
-
-					source.webp(media='(max-width: 900px)' srcset!=`${src}.webp?w=900&quality=90` sizes="100vw" width="100vw" type='image/webp')
-					source(media='(min-width: 900px)' srcset!=`${src}.webp?w=950&quality=100` sizes="100vw" width="100vw" type='image/jpeg')
-					img.core-img(src!=`${src}.jpg?w=1100&quality=100` sizes="(max-width: 500px) 500px,(max-width: 700px) 700px,(max-width: 900px) 900px, 100vw" alt=alt loading="lazy" width="100vw" itemprop="url")
-				noscript Javascript is necesscary for this sites awesome experience.
-					picture
-						source(srcset!=`${src}.webp` sizes="100vw" width="100vw" type='image/webp')
-						source(srcset!=`${src}.jpg` sizes="100vw" width="100vw" type='image/jpeg')
-						img.no-script-img(src!=`${src}.jpg` alt=alt loading="lazy" sizes="(max-width: 500px) 500px,(max-width: 700px) 700px,(max-width: 900px) 900px, 100vw" width="100vw" itemprop="url")
-		.layer-image-overlay
+  .layer-image(class=_class)
+    .layer-image-preview-img-card
+    figure.load-img(itemprop="image" itemscope itemtype="https://schema.org/ImageObject")
+      .img-contain
+        picture.plchldr-pic
+          //-  inline
+          img.placeholder-img(src!=`${src}.jpg?w=60&quality=90&effect=blur:120` sizes="100vw" width="100vw" alt=alt loading="lazy" itemprop="url")
+        picture
+          source.webp(media=`(max-width: 600px)` srcset!=`${src}.webp?w=600&quality=100` sizes=`600px` width=`600px` type='image/webp')
+          source.webp(media='(max-width: 900px)' srcset!=`${src}.webp?w=900&quality=80` sizes="100vw" width="100vw" type='image/webp')
+          source.webp(media='(min-width: 900px)' srcset!=`${src}.webp?w=950&quality=90` sizes="100vw" width="100vw" type='image/webp')
+          img.core-img(src!=`${src}.jpg?w=1100&quality=100` sizes="(max-width: 500px) 500px,(max-width: 700px) 700px,(max-width: 900px) 900px, 100vw" alt=alt loading="lazy" width="100vw" itemprop="url")
+        noscript Javascript is necesscary for this sites awesome experience.
+          picture
+            source(srcset!=`${src}.webp` sizes="100vw" width="100vw" type='image/webp')
+            source(srcset!=`${src}.jpg` sizes="100vw" width="100vw" type='image/jpeg')
+            img.no-script-img(src!=`${src}.jpg` alt=alt loading="lazy" sizes="(max-width: 500px) 500px,(max-width: 700px) 700px,(max-width: 900px) 900px, 100vw" width="100vw" itemprop="url")
+    .layer-image-overlay
