--- a/views/app.pug
+++ b/views/app.pug
@@ -142,5 +142,5 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
       +footer
 
     script(src=`${dev ? "./js/modern.min.js" : "./js/vendor.min.js"}` ph-inline async)
-    if !dev
+    //- if !dev
       script(src="./js/service.min.js" ph-inline async)
