--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -9,7 +9,7 @@ mixin footer(value = {})
 					href: "https://github.com/okikio",
 					class: "layout-margin-left-mini",
 					content: "Okiki Ojo"
-				})(target="_blank" rel="noreferrer")
+				})(target="_blank" rel="noreferrer noopener")
 				span= " | "
 				span.action-btn.pointer-default
 					.action-btn-group
@@ -29,17 +29,17 @@ mixin footer(value = {})
 					href: "https://www.linkedin.com/in/o-josephojo/",
 					class: "layout-margin-left-mini",
 					content: "LinkedIn"
-				})(target="_blank" rel="noreferrer")
+				})(target="_blank" rel="noreferrer noopener")
 				span= " - "
 				+link({
 					href: "https://github.com/laoluojo",
 					class: "layout-margin-left-mini",
 					content: "Github"
-				})(target="_blank" rel="noreferrer")
+				})(target="_blank" rel="noreferrer noopener")
 				span= " - "
 				span(itemprop="email")
 					+link({
 						href: "mailto:laoluojo@gmail.com",
 						class: "layout-margin-left-mini",
 						content: "Email"
-					})(target="_blank" rel="noreferrer")
+					})(target="_blank" rel="noreferrer noopener")
