--- a/views/pages/contact-me.pug
+++ b/views/pages/contact-me.pug
@@ -39,17 +39,17 @@ block content
                 +link({
                   href: "https://www.linkedin.com/in/o-josephojo/",
                   content: "LinkedIn"
-                })(target="_blank" rel="noreferrer")
+                })(target="_blank" rel="noreferrer noopener")
               li
                 +link({
                   href: "https://github.com/laoluojo",
                   content: "Github"
-                })(target="_blank" rel="noreferrer")
+                })(target="_blank" rel="noreferrer noopener")
               li(itemprop="email")
                 +link({
                   href: "mailto:laoluojo@gmail.com",
                   content: "Email"
-                })(target="_blank" rel="noreferrer")
+                })(target="_blank" rel="noreferrer noopener")
 
 block footer
   +footer({
