--- a/views/components/image.pug
+++ b/views/components/image.pug
@@ -10,7 +10,7 @@ mixin image(value = {})
         picture.plchldr-pic
           //-  inline
           img.placeholder-img(src!=`${src}.jpg?w=60&quality=90&effect=blur:120` sizes="100vw" width="100vw" alt=alt loading="lazy" itemprop="url")
-        picture
+        picture.core-img-pic
           source.webp(media=`(max-width: 600px)` srcset!=`${src}.webp?w=600&quality=100` sizes=`600px` width=`600px` type='image/webp')
           source.webp(media='(max-width: 900px)' srcset!=`${src}.webp?w=900&quality=80` sizes="100vw" width="100vw" type='image/webp')
           source.webp(media='(min-width: 900px)' srcset!=`${src}.webp?w=950&quality=90` sizes="100vw" width="100vw" type='image/webp')
