--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -149,6 +149,10 @@ img {
     display: block;
     border: none;
     width: 100%;
+
+    @media #{$screen-size-phone} {
+        height: inherit;
+    }
 }
 
 a {
