--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -145,6 +145,7 @@ $headerSizes: (4.2rem, 3.56rem, 2.92rem, 2.28rem, 1.64rem, 1rem);
 }
 
 img {
+    object-fit: cover;
     min-height: 200px;
     display: block;
     border: none;
