--- a/views/app.pug
+++ b/views/app.pug
@@ -16,8 +16,8 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
           description: "I'm Joseph Ojo, a skilled Mechatronics Engineer based in Oshawa, Canada. Experienced with multiple forms of technology, and an alumni of Ontario Tech."
         };
 
-    link(rel="preconnect" href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
-    link(rel="dns-prefetch" href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
+    link(rel="preconnect" href='https://res.cloudinary.com/' crossorigin)
+    link(rel="dns-prefetch" href='https://res.cloudinary.com/' crossorigin)
 
     link(rel="preconnect" href=websiteURL crossorigin)
     link(rel="dns-prefetch" href=websiteURL crossorigin)
@@ -44,8 +44,8 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
         ]
       }
 
-    //- if dev
-      meta(http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: https:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/ https://josephojo.com; script-src 'self' https://polyfill.io/ https://cdnjs.cloudflare.com/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self'; block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; worker-src 'self'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/okikio-assets/")
+    if dev
+      meta(http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: https:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/ https://josephojo.com; script-src 'self' https://res.cloudinary.com/ https://polyfill.io/ https://cdnjs.cloudflare.com/ 'sha256-vvt4KWwuNr51XfE5m+hzeNEGhiOfZzG97ccfqGsPwvE='; connect-src 'self'; block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; worker-src 'self'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/; form-action 'self'; frame-ancestors 'self';")
       meta(http-equiv="Feature-Policy" content="microphone 'none'; geolocation 'none'; usb 'none'; display-capture 'none'; sync-xhr 'self'; camera 'none'; battery 'none'")
 
     meta(name="robots" content="index, follow")
@@ -113,7 +113,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     //- link(rel="dns-prefetch" href="https://cdnjs.cloudflare.com/" crossorigin)
     //- <![endif]-->
 
-    script(src="./js/ver-check.min.js" ph-inline async)
+    script(src="./js/ver-check.min.js" async)
   body
     +link({
       class: "skip-main",
@@ -142,6 +142,6 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     block footer
       +footer
 
-    script(src=`${dev ? "./js/modern.min.js" : "./js/vendor.min.js"}` ph-inline async)
+    script(src=`${dev ? "./js/modern.min.js" : "./js/vendor.min.js"}` async)
     //- if !dev
       script(src="./js/service.min.js" ph-inline async)
