--- a/views/app.pug
+++ b/views/app.pug
@@ -112,8 +112,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     //- link(rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin)
     //- link(rel="dns-prefetch" href="https://cdnjs.cloudflare.com/" crossorigin)
     //- <![endif]-->
-    //- script(src="./js/ver-check.min.js" async)
-    script(src="./js/vendor.min.js" async)
+    script(src="./js/components/ver-check.min.js" async)
   body
     +link({
       class: "skip-main",
@@ -142,7 +141,8 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     block footer
       +footer
 
-    script(nomodule src="./js/general.min.js" async)
-    script(id="modern-js" type="module" src="./js/modern.min.js" async)
+    script(src="./js/vendor.min.js" async)
+    script(nomodule src="./js/general.min.js" defer)
+    script(id="modern-js" type="module" src="./js/modern.min.js" defer)
     //- if !dev
       script(src="./js/service.min.js" ph-inline async)
